Closed Bug 1069110 Opened 11 years ago Closed 11 years ago

Fix -Wunused-const-variable warnings in content/xul

Categories

(Core :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox34 --- wontfix
firefox35 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

clang only reports these unused warnings for non-unified builds, presumably because it has less to think about. The default non-unified mozconfig files do not include --enable-warnings-as-errors, so these warnings are not flagged on TBPL's non-unified builds. Also remove a bogus "Note the ALPHABETICAL ORDERING" from hg@1. :) content/xul/document/src/XULDocument.cpp:126:16 [-Wunused-const-variable] unused variable 'kMaxAttrNameLength' content/xul/document/src/XULDocument.cpp:127:16 [-Wunused-const-variable] unused variable 'kMaxAttributeLength'
Attachment #8491241 - Flags: review?(bzbarsky)
Comment on attachment 8491241 [details] [diff] [review] fix-xul-warnings.patch r=me
Attachment #8491241 - Flags: review?(bzbarsky) → review+
Depends on: 559505
This did land on mozilla-central, though the bug didn't get marked. Sorry for any confusion. https://hg.mozilla.org/mozilla-central/rev/507bdbd98fae
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: