Bug 1069110 - Fix -Wunused-const-variable warnings in content/xul. r=bz